# app/Http/Requests/UserEducation/UserEducationRequest.php
@@ -31,6 +31,12 @@ class UserEducationRequest extends FormRequest
 
         return match ($routeName){
             "profile.userEducation.store" => $commonRule,
+            "profile.userEducation.DetailListOfUserEducation" => [
+                "user_education_id" => ['required', 'integer', 'exists:user_educations,id']
+            ],
+            "profile.userEducation.DetailListOfUserEducationByUserSlug" => [
+                "user_slug" => ['required', 'string', 'exists:users,slug']
+            ],
             default => []
         };
 
